--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,17 @@
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ember-todo.css">
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/ember-todo.css">
 
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/ember-todo.js"></script>
+    <script src="assets/vendor.js"></script>
+    <script src="assets/ember-todo.js"></script>
 
     {{content-for "body-footer"}}
   </body>
